# mock_notification_sender

./: .pre-commit-config.yaml  README.md  jobs.py  main.py  notifiers.py  pyproject.toml
app/: app.py
app/api/: __init__.py  routers.py
app/db/: __init__.py  storage.py
app/models/: __init__.py  address.py  job.py  message.py  user.py
app/services/: __init__.py  notification_service.py  notifiers.py
