[project]
name = "mock-notification-sender"
version = "0.1.0"
description = "Test FastAPI project"
requires-python = ">=3.11"
dependencies = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
fasttext = { git = "https://github.com/facebookresearch/fastText" }
