[project]
name = "mock-notification-sender"
version = "0.1.0"
description = "Test FastAPI project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
